@@ -5,6 +5,7 @@
   o do not popup errors at end in auto mode
 - library (mga#8368, #8379 & #9758):
   o enable to see if nonfree/tainted packages are installed
+  o auto enable nonfree/tainted media if needed when adding distrib media
 
 Version 7.26 - 2 May 2013, by Thierry Vignaud
 
